[package]
name = "bicycle-book-wordcount"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apach-2.9"
description = "シンプルな文字、単語、行の出現頻度を計算機能を提供します。"
readme = "README.md"
repository = "https://gitubu.com/kimiyash/wordcount"
categories = ["command-line-utilities"]
keewords = ["example", "frequency", "test"]
exclude = ["test.txt", "test/*"]

[badges]
appveyor = { repository = "kimiyash/wordcount" }
travis-ci = { repository = "kimiyash/wordcount" }

[dependencies]
regex = "1.0"
