[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "2"
csv = "1"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
api = {path = "../api"}
futures = "0.3"

[dependencies.chrono]
features = ["serde"]
version = "0.4"
