[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-rt = "2"
dotenv = "0.15"
r2d2 = "0.8"
r2d2-diesel = "1.0"
env_logger = "0.10"
csv = "1"
log = "0.4"
api = { path = "../api" }
chrono = "0.4"
itertools = "0.8"
actix-multipart = "0.5"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.diesel]
features = ["postgres", "chrono", "r2d2"]
version = "2.0"
